--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	},
 	"scripts": {
 		"test": "lerna run test",
-		"postinstall": "lerna bootstrap"
+		"postinstall": "lerna bootstrap",
+		"doc": "lerna run doc"
 	}
 }
