--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint src/**/*.ts",
+    "lint-fix": "tslint --fix src/**/*.ts",
     "test": "tsc && jasmine",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "doc": "npm run build && jsdoc -c jsdoc-config.json",
+    "clean": "rm -rf apidocs lib node_modules package-lock.json"
   },
   "keywords": [],
   "author": "Sebastián Gurin",
@@ -19,7 +22,9 @@
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.6.2",
     "@types/shelljs": "^0.7.8",
+    "foodoc": "0.0.8",
     "jasmine": "^3.1.0",
+    "jsdoc": "^3.5.5",
     "shelljs": "^0.8.1",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
