--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -11,8 +11,7 @@
     "test": "tsc && jasmine",
     "test-no-build": "jasmine",
     "prepublish": "tsc",
-    "doc": "npm run build && jsdoc -c jsdoc-config.json",
-    "clean": "rm -rf apidocs lib node_modules package-lock.json"
+    "doc": "npm run build && jsdoc -c jsdoc-config.json; jsdoc -c jsdoc-config.json -t node_modules/foodoc/template/"
   },
   "keywords": [],
   "author": "Sebastián Gurin",
