--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"test": "lerna run test",
 		"postinstall": "lerna bootstrap",
-		"doc": "lerna run doc"
+		"doc": "lerna run doc",
+		"clean": "lerna run clean; rm -rf node_modules package-lock.json"
 	}
 }
