ansi-escape-sequences for erase, cursor, style constants

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
 		"clean": "lerna run clean; rm -rf node_modules package-lock.json; rm -rf docs",
 		"build": "lerna run build",
 		"all": "npm run clean && lerna bootstrap && npm install && npm run build && npm run doc && npm test"
+	},
+	"dependencies": {
+		"ansi-escape-sequences": "^4.0.0"
 	}
 }
