--- a/packages/cli-driver/tsconfig.json
+++ b/packages/cli-driver/tsconfig.json
@@ -7,7 +7,10 @@
       "dom"
     ],
     "outDir": "lib",
-    "sourceMap": true
+    "preserveConstEnums": true,
+    "declaration": true,
+    "sourceMap": true,
+    "inlineSources": true, // Required for debugging NPM published package.
   },
   "include": [
     "src/**/*.ts",
