--- a/packages/sample-app-using-inquirer/package.json
+++ b/packages/sample-app-using-inquirer/package.json
@@ -21,7 +21,7 @@
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.6.2",
     "@types/shelljs": "^0.7.8",
-    "cli-driver": "^0.0.7",
+    "cli-driver": "*",
     "jasmine": "^3.1.0",
     "jsdoc": "^3.5.5",
     "tslint": "^5.9.1",
