--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	},
 	"scripts": {
 		"test": "lerna run test",
-		"postinstall": "lerna bootstrap",
+		"postinstall": "lerna run build && lerna bootstrap",
 		"doc": "lerna run doc",
-		"clean": "lerna clean --yes; lerna run clean; rm -rf node_modules package-lock.json; rm -rf docs",
+		"clean": "lerna clean --yes; lerna run clean; rm -rf node_modules package-lock.json; rm -rf docs; find . -name \"node_modules\" -exec rm -rf '{}' +; ",
 		"build": "lerna run build",
 		"all": "npm run clean && lerna bootstrap && npm install && npm run build && npm run doc && npm test"
 	},
