--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -12,12 +12,10 @@
     "test": "npm run build && jasmine",
     "test-no-build": "jasmine",
     "prepare": "npm run build",
+    "postinstall": "npm run build",
+    "prepublish": "npm run build",
     "doc": "npm run build && typedoc --options typedoc.js",
     "clean": "find . -name \"node_modules\" -exec rm -rf '{}' +; rm -rf  package-lock.json lib tmp src/*.d.ts"
-
-    
-
-
   },
   "keywords": [],
   "author": "Sebastián Gurin",
