--- a/packages/sample-app-using-inquirer/package.json
+++ b/packages/sample-app-using-inquirer/package.json
@@ -8,9 +8,10 @@
     "watch": "tsc --watch",
     "lint": "tslint src/**/*.ts",
     "lint-fix": "tslint --fix src/**/*.ts",
-    "test": "tsc && jasmine",
+    "test": "npm run build && jasmine",
     "test-no-build": "jasmine",
-    "prepublish": "tsc",
+    "prepublish": "npm run build",
+    "postinstall": "npm run build",
     "clean": "find . -name \"node_modules\" -exec rm -rf '{}' +; rm -rf package-lock.json lib"
   },
   "keywords": [],
