serial jasmineand done() in tests

--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -9,8 +9,7 @@
     "watch": "tsc --watch",
     "lint": "tslint src/**/*.ts",
     "lint-fix": "tslint --fix src/**/*.ts",
-    "test": "npm run build && jasmine",
-    "test-no-build": "jasmine",
+    "test": "npm run build && serial-jasmine lib/spec/*Spec.js # before it was npm run build && jasmine",
     "prepare": "npm run build",
     "postinstall": "npm run build",
     "prepublish": "npm run build",
@@ -30,6 +29,7 @@
     "@types/node": "^9.6.2",
     "@types/shelljs": "^0.7.8",
     "jasmine": "^3.1.0",
+    "serial-jasmine": "^0.1.1",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.1",
