--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -10,11 +10,12 @@
     "lint": "tslint src/**/*.ts",
     "lint-fix": "tslint --fix src/**/*.ts",
     "test": "npm run build && jasmine",
+    "test-nobuild": "jasmine",
     "prepare": "npm run build",
     "postinstall": "npm run build",
     "prepublish": "npm run build",
     "doc": "npm run build && typedoc --options typedoc.js",
-    "clean": "find . -name \"node_modules\" -exec rm -rf '{}' +; rm -rf  package-lock.json lib tmp src/*.d.ts"
+    "clean": "find . -name \"node_modules\" -exec rm -rf '{}' +; rm -rf  package-lock.json lib tmp* src/*.d.ts"
   },
   "keywords": [],
   "author": "Sebastián Gurin",
