--- a/packages/sample-app-using-inquirer/package.json
+++ b/packages/sample-app-using-inquirer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sample-app-using-inquirer",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "",
   "scripts": {
@@ -20,7 +20,7 @@
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.6.2",
     "@types/shelljs": "^0.7.8",
-    "cli-driver": "0.0.9",
+    "cli-driver": "^0.1.0",
     "jasmine": "^3.1.0",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
