--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -15,6 +15,9 @@
     "doc": "npm run build && typedoc --options typedoc.js",
     "clean": "find . -name \"node_modules\" -exec rm -rf '{}' +; rm -rf  package-lock.json lib tmp* src/*.d.ts"
   },
+  "files": [
+    "lib"
+  ],
   "keywords": [],
   "author": "Sebastián Gurin",
   "license": "ISC",
@@ -33,5 +36,6 @@
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.1",
     "typescript": "^2.8.1"
-  }
+  },
+  "readme": "README.MD"
 }
