--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,22 +4,53 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "node",
             "request": "launch",
             "protocol": "inspector",
             "name": "sample-app-test1",
             "args": [
-                "apiSpec"
+                "currentSpec"
             ],
-            "runtimeArgs": [                
+            "runtimeArgs": [
                 "--inspect",
                 "--debug-brk"
             ],
             "cwd": "${workspaceFolder}/packages/sample-app-using-inquirer/",
             "program": "${workspaceFolder}/packages/cli-driver/lib/spec/index.js",
             "sourceMaps": true
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "protocol": "inspector",
+            "name": "currentSpec",
+            "args": [
+                "currentSpec",
+            ],
+            "runtimeArgs": [
+                "--inspect",
+                "--debug-brk",
+            ],
+            "cwd": "${workspaceFolder}/packages/cli-driver/",
+            "program": "${workspaceFolder}/packages/cli-driver/lib/spec/index.js",
+            "sourceMaps": true
+        },
+        {
+        "type": "node",
+        "request": "launch",
+        "protocol": "inspector",
+        "name": "waitUntilTimeoutSpec",
+        "args": [
+        "waitUntilTimeoutSpec",
+        ],
+        "runtimeArgs": [
+        "--inspect",
+        "--debug-brk",
+        ],
+        "cwd": "${workspaceFolder}/packages/cli-driver/",
+        "program": "${workspaceFolder}/packages/cli-driver/lib/spec/index.js",
+        "sourceMaps": true
         }
     ]
 }
