--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"all": "npm run clean ; lerna bootstrap ; npm install ; npm run build ; npm run doc ; npm test",
 		"test-clone": "rm -rf ../cli-driver-testclone; mkdir ../cli-driver-testclone; cd ../cli-driver-testclone; git clone ../cli-driver/.git;  cd cli-driver ; npm install ; npm test; cd ../../cli-driver ; rm -rf ../cli-driver-testclone",
 		"test-nobuild": "lerna run test-nobuild",
-		"test-nobuild-nolerna": "cd packages/cli-driver ; npm run test-nobuild ; cd ../sample-app-using-inquirer ; npm run test-nobuild",
+		"test-nobuild-nolerna": "cd packages/cli-driver ; npm run test-nobuild && cd ../sample-app-using-inquirer && npm run test-nobuild",
 		"prepublish": "npm run build"
 	},
 	"dependencies": {}
