--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -32,6 +32,7 @@
     "@types/shelljs": "^0.7.8",
     "jasmine": "^3.1.0",
     "jasmine-ts-console-reporter": "^3.1.1",
+    "strip-ansi": "^4.0.0",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.1",
