--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -9,7 +9,8 @@
     "watch": "tsc --watch",
     "lint": "tslint src/**/*.ts",
     "lint-fix": "tslint --fix src/**/*.ts",
-    "test": "npm run build && jasmine --reporter=jasmine-ts-console-reporter",
+    "test": "npm run test-critical",
+    "test-all": "npm run build && jasmine --reporter=jasmine-ts-console-reporter",
     "test-critical": "jasmine --fail-fast=true --config=./spec/support/jasmine-critical.json",
     "test-nobuild": "jasmine --reporter=jasmine-ts-console-reporter",
     "prepublish": "npm run build",
