coverage, run kasmine test with node-ts no need for reporter

--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -3,19 +3,18 @@
   "version": "0.1.0",
   "description": "like webdriver but for the command line",
   "main": "lib/src/index.js",
-  "types": "src/index.d.ts",
+  "types": "types/src/index.d.ts",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "lint": "tslint src/**/*.ts",
-    "lint-fix": "tslint --fix src/**/*.ts",
-    "test": "npm run test-critical",
-    "test-all": "tsc && jasmine --reporter=jasmine-ts-console-reporter",
-    "test-critical": "tsc && jasmine --fail-fast=true --config=./spec/support/jasmine-critical.json",
-    "test-nobuild": "jasmine --reporter=jasmine-ts-console-reporter",
-    "prepublish": "tsc",
+    "test": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json ",
+    "test-all": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-all.json ",
+    "coverage-html": "rm -rf coverage .ny_output; nyc  -r lcov -e .ts -x \"*.spec.ts\" ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json  ",
+    "prepare": "tsc",
     "doc": "tsc && typedoc --options typedoc.js",
-    "clean": "find . -name \"node_modules\" -exec rm -rf '{}' + ; rm -rf  package-lock.json lib tmp* src/*.d.ts"
+    "clean": "find . -name \"node_modules\" -exec rm -rf '{}' + ; rm -rf  package-lock.json lib tmp* src/*.d.ts",
+    "lint": "tslint src/**/*.ts",
+    "lint-fix": "tslint --fix src/**/*.ts"
   },
   "files": [
     "lib"
@@ -33,8 +32,10 @@
     "@types/node": "^9.6.2",
     "@types/shelljs": "^0.7.8",
     "jasmine": "^3.1.0",
-    "jasmine-ts-console-reporter": "^3.1.1",
+    "nyc": "^11.6.0",
     "strip-ansi": "^4.0.0",
+    "ts-node": "^5.0.1",
+    "tsconfig-paths": "^3.2.0",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.1",
