--- a/packages/cli-driver/package.json
+++ b/packages/cli-driver/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "test": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json ",
+    "test": "npm run test-critical",
+    "test-critical": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json ",
     "test-all": "ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-all.json ",
-    "coverage-html": "rm -rf coverage .ny_output; nyc  -r lcov -e .ts -x \"*.spec.ts\" ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json  ",
+    "test-coverage": "rm -rf coverage .ny_output; nyc  -r lcov -e .ts -x \"*.spec.ts\" ts-node -r tsconfig-paths/register node_modules/jasmine/bin/jasmine --config=./spec/support/jasmine-critical.json  ",
     "prepare": "tsc",
     "doc": "tsc && typedoc --options typedoc.js",
     "clean": "find . -name \"node_modules\" -exec rm -rf '{}' + ; rm -rf  package-lock.json lib tmp* src/*.d.ts",
