--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 		"lerna": "^2.9.1"
 	},
 	"scripts": {
-		"test": "npm run test-coverage",
-		"test-all": "lerna run test",
+		"test": "lerna run test-critical",
+		"test-all": "lerna run test-critical",
 		"postinstall": "lerna bootstrap",
 		"doc": "lerna run doc ; cp -r doc-assets docs",
 		"clean": "lerna clean --yes; lerna run clean; rm -rf node_modules package-lock.json; rm -rf docs; find . -name \"node_modules\" -exec rm -rf '{}' +; ",
@@ -13,8 +13,7 @@
 		"test-clone": "rm -rf ../cli-driver-test; mkdir ../cli-driver-test; cd ../cli-driver-test; git clone ../cli-driver/.git;  cd cli-driver ; npm install ; npm test; cd ../../cli-driver ; rm -rf ../cli-driver-test",
 		"test-nobuild": "lerna run test-nobuild",
 		"test-nobuild-nolerna": "cd packages/cli-driver ; npm run test-nobuild && cd ../sample-app-using-inquirer && npm run test-nobuild",
-		"prepublish": "npm run build",
-		"test-coverage": "rm -rf coverage; cd packages/cli-driver ; npm run test-coverage-report; mv coverage ../../; cd ../.. ; mv coverage/coverage-final.json coverage/coverage.json"
+		"prepublish": "npm run build"
 	},
 	"dependencies": {}
 }
