--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	},
 	"scripts": {
 		"test": "lerna run test-critical",
-		"test-all": "lerna run test-critical",
+		"test-all": "lerna run test-all",
 		"postinstall": "lerna bootstrap",
 		"doc": "lerna run doc ; cp -r doc-assets docs",
 		"clean": "lerna clean --yes; lerna run clean; rm -rf node_modules package-lock.json; rm -rf docs; find . -name \"node_modules\" -exec rm -rf '{}' +; ",
