--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,20 @@
         "**/.hg": true,
         "**/CVS": true,
         "**/.DS_Store": true,
-        "*.d.ts": true,
-        "*.js": true
+        "**/*.js": true,
+        "node_modules": true
     },
-    "cSpell.words": [
-        "truthy"
-    ],
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/node_modules/**": true,
+        "**/lib": true,
+        "**/doc": true
+    },
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
+        "**/lib": true,
+        "**/doc": true
+    }
 }
