--- a/packages/node-keys/package.json
+++ b/packages/node-keys/package.json
@@ -2,7 +2,7 @@
   "name": "node-keys",
   "version": "0.1.2",
   "description": "",
-  "main": "src/index.js",
+  "main": "lib/src/index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
